# SDL2_CMake_template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SDL2_LOVES_CMAKEConfig.hpp.in  main.cpp
